# bengine

./: .clippy.toml  Cargo.toml  build.rs
.cargo/: config.toml
assets/: beach.blend  beach.glb  beach.mtl  coins.blend  coins.glb  donut.glb  icosahedron.glb  monstah.blend  monstah.glb  octahedron.glb  ring.blend  ring.glb
assets/molly-trombone/: 0  1  10  11  12  13  14  15  16  17  18  19  2  3  4  5  6  7  8  9  song.m4a
assets/music/: smp_searching.opus  smpdanger.opus  solesearching.opus
assets/music/trombone/: 0.opus  1.opus  10.opus  11.opus  12.opus  13.opus  14.opus  15.opus  16.opus  17.opus  18.opus  19.opus  2.opus  3.opus  4.opus  5.opus  6.opus  7.opus  8.opus  9.opus
assets/sfx/: beer-bottle-lids.opus  coins-dropping.opus  ring.opus  shoe.opus  soda-can.opus
geometric-algebra/: Cargo.toml
geometric-algebra/src/: bivector.rs  lib.rs  main.rs  number.rs  rotor.rs  vec2.rs  vector.rs
src/: audio.rs  buffer.rs  clock.rs  collision.rs  command_buffer.rs  debug_messenger.rs  descriptors.rs  device.rs  egui_backend.rs  egui_sdl3_event.rs  event_loop.rs  game.rs  gltf.rs  gui.rs  image.rs  instance.rs  main.rs  mesh.rs  node.rs  physics.rs  pipeline.rs  player.rs  render_pass.rs  renderer.rs  scene.rs  shader_module.rs  shader_pipelines.rs  skybox.rs  surface.rs  swapchain.rs  synchronization.rs  texture.rs  vertex.rs
src/gui/: egui_backend.rs  egui_sdl3_event.rs
src/pd/: patch.pd
src/renderer/: buffer.rs  command_buffer.rs  debug_messenger.rs  descriptors.rs  device.rs  dtor_entry.rs  image.rs  instance.rs  material.rs  mesh.rs  pipeline.rs  render_pass.rs  sampler.rs  shader_module.rs  surface.rs  swapchain.rs  synchronization.rs  texture.rs  vertex.rs
src/renderer/shaders/: egui.frag  egui.vert  shader.frag  shader.vert  skybox.comp  skybox.frag  skybox.vert
src/shaders/: egui.frag  egui.vert  main.frag  main.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
test-objects/: cube.glb  dodecahedron.glb  tetrahedron.glb
test-scene/: cube.mtl  floor_tiles_06_1k.blend  grass.blend1  grass.mtl  room.blend  room.mtl
test-scene/textures/: floor_tiles_06_nor_gl_1k.exr
