[package]
name = "bengine"
license = "MIT OR Apache-2.0"
version = "0.1.0"
description = "yet another game engine"
readme = "README.md"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["game", "engine", "gamedev", "graphics", "bengine"]
repository = "https://github.com/minerscale/bengine"
edition = "2024"

[features]
colemak = []

[profile.release]
lto = true
#debug = true
#strip = false

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.rubato]
opt-level = 3

[dependencies]
bitfield-struct = "0.11.0"
bytemuck = "1.23.1"
colored = "3.0.0"
cpal = "0.16.0"
easy-cast = "0.5.3"
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image"] }
gltf = "1.4.1"
libpd-rs = { git = "https://github.com/minerscale/libpd-rs.git", branch = "dev" }
log = "0.4.22"
log-once = "0.4.1"
nalgebra = "0.34.0"
notify = "8.2.0"
num-traits = "0.2.19"
rapier3d = "0.30.0"
rayon = "1.10.0"
replace_with = "0.1.7"
rubato = "0.16.2"
seq-macro = "0.3.6"
tracing-mutex = "0.3.1"
ultraviolet = "0.10.0"

[dependencies.magnum]
git = "https://github.com/minerscale/magnum-rs.git"
version = "1.0.1"
default-features = false
features = ["with_ogg"]

[dependencies.ash]
version = "0.38.0"
default-features = false
features = ["linked", "debug", "std"]

[dependencies.env_logger]
version = "0.11.5"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

[dependencies.obj-rs]
version = "0.7.4"
default-features = false

[dependencies.sdl3]
version = "0.15.1"
default-features = false
features = ["raw-window-handle", "build-from-source-static"]

[build-dependencies]
anyhow = "1.0.89"
colored = "3.0.0"
